--- a/main.css
+++ b/main.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:wght@500&display=swap');
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 #chatContainer {
   display: flex;
   justify-content: center;
@@ -36,7 +44,9 @@
   background-color: rgba(0, 255, 0, 0.1);
   border-radius: 5px;
   text-align: left;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Poppins", serif;
+  font-weight: 500;
+  font-style: normal;
 }
 
 .message-input {
@@ -46,8 +56,9 @@
   border: 1px solid #00FF00;
   background-color: black;
   color: #00FF00;
-  font-family: 'Courier New', Courier, monospace;
-  font-size: 16px;
+  font-family: "Poppins", serif;
+  font-weight: 500;
+  font-style: normal;
 }
 
 .message-input::placeholder {
@@ -62,8 +73,9 @@
   color: black;
   cursor: pointer;
   border-radius: 5px;
-  font-family: 'Courier New', Courier, monospace;
-  font-size: 16px;
+  font-family: "Poppins", serif;
+  font-weight: 500;
+  font-style: normal;
 }
 
 .send-button:hover {
